--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container w-100 h-100 ">
         <div class="row view_position w-100 h-100 ">
             <div class="d-flex justify-content-center align-items-center">
-                <div class="col-md-12 col-sm-12 q_container ">
+                <div class="col-md-12 col-sm-12 q_container w-100">
                     <div class="q1 d-flex justify-content-center align-items-center flex-column">
                         <h4>
 
@@ -41,7 +41,7 @@
                         </div>
                         <div class="condation text-center">
                             <p>
-                                اتعهد بعدم الاستعانه بأي مصدر خارجي وان اتم حل الاسئله بمجهودي .
+                                أتعهد بعدم الأستعانه بأي مصدر خارجي وأن أتم حل الاسئله بمجهودي .
                             </p>
                             <label for="flexCheckDefault" class="label_agree">اوافق</label>
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
@@ -55,7 +55,7 @@
                             </h6>
                         </div>
                     </div>
-                    <div class="q2 d-none mt-5">
+                    <div class="q2 d-none">
                         <h4>
                             السؤال الأول
                         </h4>
