--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400..700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&family=Reem+Kufi+Fun:wght@400..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&family=Reem+Kufi+Fun:wght@400..700&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="/css/style.scss"> -->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/media query/midea.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="media query/midea.css">
 </head>
+
 <body class="bg">
     <div class="container w-100 h-100 ">
         <div class="row view_position w-100 h-100 ">
@@ -50,7 +53,7 @@
                         </div>
                         <div class="message d-none">
                             <h6 class="appear_message">
-                                برجاء ادخال الاسم 
+                                برجاء ادخال الاسم
                             </h6>
                         </div>
                     </div>
@@ -64,19 +67,22 @@
                         <div class="answer p-3 d-flex ">
                             <div class="d-flex flex-column">
                                 <div class="ratio_answer">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" >
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                        id="flexRadioDefault1">
                                     <label class="form-check-label" for="flexRadioDefault1">
                                         الاول
                                     </label>
                                 </div>
                                 <div class="ratio_answer">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                        id="flexRadioDefault2">
                                     <label class="form-check-label" for="flexRadioDefault2">
                                         الثاني
                                     </label>
                                 </div>
                                 <div class="ratio_answer">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" >
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                        id="flexRadioDefault3">
                                     <label class="form-check-label" for="flexRadioDefault3">
                                         الثالث
                                     </label>
