--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        <link href="https://fonts.googleapis.com/css2?family=Marhey:wght@300..700&display=swap" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="/css/style.scss"> -->
@@ -91,7 +92,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section()">التالي</button>
+                                    onclick="switch_number_section('q1')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -128,7 +129,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section()">التالي</button>
+                                    onclick="switch_number_section('q2')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -165,7 +166,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section()">التالي</button>
+                                    onclick="switch_number_section('q3')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -202,7 +203,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section()">التالي</button>
+                                    onclick="switch_number_section('q4')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -239,7 +240,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section()">التالي</button>
+                                    onclick="switch_number_section('q5')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -276,7 +277,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section()">التالي</button>
+                                    onclick="switch_number_section('q6')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -313,7 +314,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section()">التالي</button>
+                                    onclick="switch_number_section('q7')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -350,7 +351,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section()">التالي</button>
+                                    onclick="switch_number_section('q8')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -387,7 +388,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section()">التالي</button>
+                                    onclick="switch_number_section('q9')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -426,6 +427,21 @@
                                 <button type="submit" class="btn Next_btn" onclick="last_q()">التالي</button>
                             </div>
                         </div>
+                    </div>
+                    <div class="finish_message d-none">
+                        <h1>
+                            مـبـارك
+                        </h1>
+                        <p id="special_message">
+                            اللهم ارزقها بر والديها والجنه
+                            اللهم ارزقها بر والديها والجنه
+                            اللهم ارزقها بر والديها والجنه
+                        </p>
+                    </div>
+                    <div class="message_no_answer d-none">
+                        <p>
+                            برجاء اختيار اجابه من الأتي.
+                        </p>
                     </div>
 
                 </div>
