--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section('q1')">التالي</button>
+                                    onclick="checkRadio('q1')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section('q2')">التالي</button>
+                                    onclick="checkRadio('q2')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section('q3')">التالي</button>
+                                    onclick="checkRadio('q3')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section('q4')">التالي</button>
+                                    onclick="checkRadio('q4')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -240,7 +240,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section('q5')">التالي</button>
+                                    onclick="checkRadio('q5')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -277,7 +277,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section('q6')">التالي</button>
+                                    onclick="checkRadio('q6')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section('q7')">التالي</button>
+                                    onclick="checkRadio('q7')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section('q8')">التالي</button>
+                                    onclick="checkRadio('q8')">التالي</button>
                             </div>
                         </div>
                     </div>
@@ -388,7 +388,7 @@
                             </div>
                             <div class="submit d-flex justify-content-center align-items-center mt-4">
                                 <button type="submit" class="btn Next_btn"
-                                    onclick="switch_number_section('q9')">التالي</button>
+                                    onclick="checkRadio('q9')">التالي</button>
                             </div>
                         </div>
                     </div>
